K1J-1538: Fix immuteable list issue. (#255)
Co-authored-by: cigerhed <christoffer.sigerhed@soprasteria.com>